# XImageEdit

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_EN.md  icontroller.cpp  icontroller.h  icontrollerfactory.h  igraph.h  iobserver.h  iview.h  main.cpp  myimageedit.cpp  myimageedit.h  myimageedit.ui  res.qrc  xcontrollerfactory.cpp  xcontrollerfactory.h  xeditview.cpp  xeditview.h  xerasegraph.cpp  xerasegraph.h  ximage.cpp  ximage.h  ximagegraph.cpp  ximagegraph.h  xmodel.cpp  xmodel.h  xpengraph.cpp  xpengraph.h  xrectgraph.cpp  xrectgraph.h  xsubject.cpp  xsubject.h
Resources/: apple_logo.icns  res.qrc
include/: constants.h  icontroller.h  icontrollerfactory.h  igraph.h  iobserver.h  iview.h  myimageedit.h  xcontrollerfactory.h  xeditview.h  xerasegraph.h  ximage.h  ximagegraph.h  xmodel.h  xpengraph.h  xrectgraph.h  xsubject.h
src/: icontroller.cpp  main.cpp  myimageedit.cpp  myimageedit.ui  xcontrollerfactory.cpp  xeditview.cpp  xerasegraph.cpp  ximage.cpp  ximagegraph.cpp  xmodel.cpp  xpengraph.cpp  xrectgraph.cpp  xsubject.cpp
